--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mitchell Piehl | Portfolio</title>
     <link rel="icon" href="images/mp.png" type="image/png" />
     <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="css2.css" />
+    <link rel="stylesheet" href="portfolio.css" />
   </head>
   <body>
     <!-- Header -->
