--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,26 @@
         <title> Portfolio</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" initial-scale="1.0"/>
+        <link rel="icon" href="images/mp.png" type="image/png" />
         <link rel="stylesheet" href="normalize.css" />
         <link rel="stylesheet" href="portfolio.css" />
     </head>
     <body>
-        <div id="header">
-            <div class="hcol1"><h1 class="head">Mitchell Piehl</h1></div>
-            <div class="hcol2">
-                <ul id="nav">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="skills.html">Skills</a></li>
-                    <li><a href="contact.html" class="current">Contact</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                </ul>
-            </div>
-        </div>
+        <header id="header">
+    <div class="logo">
+        <img src="images/mp.png" alt="MP Logo" class="logo-img" />
+        <h1 class="site-title">Mitchell Piehl</h1>
+    </div>
+    <nav>
+        <ul id="nav">
+        <li><a href="index.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html" class="current">Contact</a></li>
+        </ul>
+    </nav>
+    </header>
         <div id="wrapper">
             <div id="content" class="contact_me">
                 <h1 class="center">Contact Me</h1>
