--- a/projects.html
+++ b/projects.html
@@ -63,8 +63,7 @@
           raising awareness of AI’s impact and possible mitigations.
         </p>
         <div class="buttons">
-          <a href="https://pieh6361.dima358.com/final" target="_blank" class="btn">Website</a>
-          <a href="https://github.com/mitchellpiehl/SustainableAI" target="_blank" class="btn">Code</a>
+          <a href="https://mitchellpiehl.com/sustainableAI" target="_blank" class="btn">Website</a>
         </div>
       </div>
 
