--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
           raising awareness of AI’s impact and possible mitigations.
         </p>
         <div class="buttons">
-          <a href="https://mitchellpiehl.com/sustainableAI" target="_blank" class="btn">Website</a>
+          <a href="https://tosustainableai.com" target="_blank" class="btn">Website</a>
         </div>
       </div>
 
