--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Hero -->
     <section class="hero fade-in">
     <div class="hero-content">
-        <img src="images/mediaDay2024.jpeg" alt="Mitchell Piehl" class="profile-img" />
+        <img src="images/IMG_8350.jpeg" alt="Mitchell Piehl" class="profile-img" />
         <h1>Hi, I'm Mitchell 👋</h1>
         <h2>PhD Student | AI/ML Researcher | Educator</h2>
         <p>
