--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
           Published research detailing estimation-verification techniques for reliable reasoning in AI.
         </p>
         <div class="buttons">
-          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5166090" target="_blank" class="btn">Paper</a>
+          <a href="https://arxiv.org/abs/2509.18565" target="_blank" class="btn">Paper</a>
           <a href="https://github.com/mitchellpiehl/EVoSS" target="_blank" class="btn">Code</a>
         </div>
       </div>
