--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
         <h2>Solving Math Word Problems with Estimation Verification</h2>
         <p>
           Designed a novel method improving LLM math problem-solving accuracy by ~2%.  
-          Published research detailing estimation-verification techniques for reliable reasoning in AI.
+          Published research detailing estimation-verification techniques for reliable reasoning in AI. 
+          The full paper was accepted to IEEE ICMLA 2025.
         </p>
         <div class="buttons">
           <a href="https://arxiv.org/abs/2509.18565" target="_blank" class="btn">Paper</a>
